--- a/pilot-react-app/public/index.html
+++ b/pilot-react-app/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pilot Card Selection</title>
+    <title>航校学生管理系统</title>
   </head>
   <body>
     <div id="root"></div>
